--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mysql2": "^2.3.3",
     "rotating-file-stream": "^3.0.4",
     "sequelize": "^6.21.0",
-    "socket.io": "^4.5.1"
+    "socket.io": "^4.5.1",
+    "uuid": "^8.3.2"
   }
 }
